--- a/docs/pgpessoal.css
+++ b/docs/pgpessoal.css
@@ -1,22 +1,60 @@
+body{
+    background-color: rgb(67, 115, 202);
+}
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+}
+h2{
+    letter-spacing: 1px;
+    font-family: Verdana, Geneva, Tahoma, serif;
+}
 img{
-    width: 15%;
+    width: 100%;
 }
 .header {
     width: 100%;
+    margin: 0;
 }
 .menu{
-    background-color: rgb(0, 0, 111);
+    
+    background-color: rgb(240, 86, 86);
     text-align: center;
     font-size: x-large;
+    color: black ;
+    
     
 }
+
 .menu ul li{
     display: inline-block;
-    border-style: double;
-    border-color: cornflowerblue;
-    border-radius: 4%;
+    
+
 }
 .menu ul li a {
+    display: inline-block;
+   
+}
+
+.top{
+    height: 93%;
+    width: 22.25%;
+    background-color: rgb(240, 86, 86);
+    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    overflow-x: hidden;
+    position: absolute;
     display: block;
-    color: aliceblue;
+
+    border-color: rgb(240, 86, 86);;
+    border-style: outset;
+    border-radius: 1%;
+}
+.principais{
+    margin-left: 23%;
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   border-style: outset;
+    border-color: blue;
+    border-radius: 1%;
+
 }
