--- a/docs/pgpessoal.css
+++ b/docs/pgpessoal.css
@@ -1,5 +1,6 @@
 body{
-    background-color: rgb(67, 115, 202);
+    
+    background-color: rgb(216, 222, 235);
 }
 h1{
   font-family: Arial, Helvetica, sans-serif;
@@ -17,7 +18,7 @@ img{
 }
 .menu{
     
-    background-color: rgb(240, 86, 86);
+    background-color: rgb(40, 236, 243);
     text-align: center;
     font-size: x-large;
     color: black ;
@@ -38,14 +39,14 @@ img{
 .top{
     height: 93%;
     width: 22.25%;
-    background-color: rgb(240, 86, 86);
+    background-color: rgb(99, 235, 240);
     
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     overflow-x: hidden;
     position: absolute;
     display: block;
 
-    border-color: rgb(240, 86, 86);;
+    border-color: rgb(97, 239, 255);
     border-style: outset;
     border-radius: 1%;
 }
@@ -54,7 +55,7 @@ img{
     padding-left: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    border-style: outset;
-    border-color: blue;
+    border-color: rgb(97, 239, 255);
     border-radius: 1%;
 
 }
