--- a/docs/pgpessoal.css
+++ b/docs/pgpessoal.css
@@ -17,7 +17,8 @@ img{
     margin: 0;
 }
 .menu{
-    
+    margin-left: 200px;
+    margin-right: 200px;
     background-color: rgb(40, 236, 243);
     text-align: center;
     font-size: x-large;
